# omni-BASE

./: .gitlab-ci.yml  CONTRIBUTING.md  GITLAB_CI_ANDROID_SETUP.md  IOS_BUILD_SETUP.md  README.md
apps/omnitak_ios_test/: DEPLOYMENT.md  FEATURE_VERIFICATION.md
apps/omnitak_ios_test/OmniTAKTest/: ContentView.swift  Info.plist  MapViewController.swift  OmniTAKTest-Bridging-Header.h  OmniTAKTestApp.swift  TAKService.swift
apps/omnitak_ios_test/OmniTAKTest.xcodeproj/: project.pbxproj
docs/: LOCAL_DEVELOPMENT_SETUP.md
modules/omnitak_mobile/: ATAK_MENU_IMPLEMENTATION.md  BUILD.bazel  BUILD_CONFIGURATION.md
modules/omnitak_mobile/src/valdi/omnitak/: AppController.tsx
modules/omnitak_mobile/src/valdi/omnitak/components/: NavigationDrawer.tsx
modules/omnitak_mobile/src/valdi/omnitak/screens/: EnhancedMapScreen.tsx  MapScreen.tsx  MapScreenWithMapLibre.tsx  PluginManagementScreen.tsx  ServerManagementScreen.tsx  SettingsScreen.tsx
plugin-template/: .bazelrc  .bazelrc.local.example  .gitignore  README.md
plugin-template/scripts/: build_plugin_ios.sh
